testdata/golden/sema/valid/fn_all_paths_return.fmt
fn all_paths(flag: bool, n: int) -> int {
    if (flag) {
        return n;
    } else {
        if (n > 0) {
            return n - 1;
        }
        return 0;
    }
}

fn loop_returns_always() -> int {
    while (true) {
        return 1;
    }
}
