testdata/golden/sema/invalid/array_fixed_len_mismatch.fmt
fn main() -> int {
    let xs: int[2] = [1, 2, 3];
    return xs[0];
}
